fix(core-heading): reduce h2 character spacing

--- a/packages/Heading/Heading.modules.scss
+++ b/packages/Heading/Heading.modules.scss
@@ -42,7 +42,7 @@
 
   font-size: 1.5rem;
   line-height: 1.33; // 30px
-  letter-spacing: -0.4px;
+  letter-spacing: -0.7px;
 
   .sup {
     font-size: 1rem;
